<resources>
    <string name="app_name">iStockTake</string>
    <!--Login-->
    <!-- no text views only images on the left side + hints -->
    <string name="login">Login</string>
    <string name="password_hint">enter password</string>
    <string name="username_hint">enter username</string>

    <!--Registration page-->
    <string name="Register">Create an account</string>
    <string name="username_create">create unique username</string>
    <string name="name">Enter your Name</string>
    <string name="surname">Enter your Surname</string>
    <string name="email">Enter your Email</string>
    <string name="location">Enter your region/suburb/location</string>
    <string name="password_create">create password</string>
    <string name="password_create_conf">re-enter password</string>
    <string name="register_prompt">Don\'t have an account? Register new account.</string>

    <!--Product View Page-->
    <string name="product_description">About this product, text description about product</string>
    <string name="store_name">Store Name</string>
    <string name="product_category">product category</string>
    <string name="product_price">Product selling price</string>
    <string name="product_price_ph">R13.00</string>
    <string name="product_name">Product Name</string>
    <string name="category_name">Category Name</string>
    <string name="add_to_list">Add to list</string>
    <string name="add">+</string>
    <string name="minus">-</string>

    <!--Navigations-->
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="my_list">My List</string>
    <string name="my_favourite">My Favourite</string>
    <string name="trending">Trending</string>
    <string name="sale">Sale</string>
    <string name="hi_user">Hi!</string>
    <string name="mylist">My list</string>


    <!--List-->
    <string name="your_list">Your products list</string>
    <string name="total">Total</string>
    <string name="tax">tax @ 15%</string>
    <string name="empty">Your products list is empty.</string>
    <string name="item_total">Item Total</string>
    <string name="product">Product</string>
    <string name="product_price_view">Selling Price</string>
    <string name="price">Price</string>

    <string name="add_list">Save List</string>

</resources>