<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="100dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/loginBannerImage"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="50dp"
            android:srcCompact=""
            app:srcCompat="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/loginBannerImage"
            android:layout_marginBottom="15dp"
            app:boxBackgroundColor="#FFFFFF">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below=""
            android:layout_marginBottom="15dp"
            app:boxBackgroundColor="#FFFFFF">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_bottom="@id/password_et"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/white_bg"
            android:gravity="center"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:below="@id/btn_login"
            android:text="@string/register_prompt"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</RelativeLayout>