<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:cardBackgroundColor="@color/white"
                app:contentPaddingLeft="25dp"
                app:contentPaddingRight="25dp">

                <ImageView
                    android:id="@+id/productImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/asian_coconut_40_ml"
                    android:contentDescription="product image">

                </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text="ProductName"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productDescription"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/product_description"
                        android:textColor="@color/white">

                    </TextView>

                    <TextView
                        android:id="@+id/productSellPrice"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/product_price"
                        android:textColor="@color/black"
                        android:textSize="20sp">

                    </TextView>

                    <TextView
                        android:id="@+id/storeName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/store_name"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>

                <TextView
                    android:id="@+id/relatedProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_circle"
                    android:padding="5dp"
                    android:text="Related Products"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/relatedProductsRV"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="10dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>